data/derived/fa15/progs/unify/prog1928.ml.out
Characters 44-57:
  let stringOfList f l = "[" ^ sepConcat ";" [List.map(f l)]  ^ "]";;
                                              ^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
